# ai-chatbot-apps

./: .gitignore
first-ai-project/: .env  app.py  readme.md  requirements.txt
first-voice-agent/: .gitignore  2test_agent.py  README.md  book_appointment.py  demo_agent.py  demo_voice_only.py  loan_finance_agent.py  multilingual_agent.py  my.json  outbound.json  outbound_agent.py  outbound_agent_app.py  outbound_calling.py  property_sales_agent.py  pyproject.toml  screening_agent.py  test_agent.py
first-voice-agent/.github/workflows/: main.yml
first-voice-agent/models/: __init__.py  prospect.py
first-voice-agent/repository/: __init__.py  prospect_repository.py
first-voice-agent/scripts/: generate-env-from-upstash
first-voice-agent/tests/: test_voice_catalog.py
first-voice-agent/utils/: __init__.py
first-voice-agent/utils/agent_utils/: __init__.py  llm_strategy.py  stt_strategy.py  tts_strategy.py  voice_catalog.py
first-voice-agent/utils/config_utils/: __init__.py  config_loader.py  db_config.py  env_loader.py
first-voice-agent/utils/data_utils/: __init__.py  date_utils.py  time_utils.py
first-voice-agent/utils/monitoring_utils/: __init__.py  logging.py
my-first-agent/: README.md
my-first-excelsheet-agent/: README.md  app.py  charts.py  data_handler.py  gemini_client.py  pyproject.toml  ui_components.py
my-first-excelsheet-agent/.streamlit/: secrets.toml
my-first-excelsheet-agent/my_first_excelsheet_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
my-first-pdf-sheet-agent/: README.md  app.py  requirements.txt
my-first-voice-bot/: .env.example  README.md  main.py  pyproject.toml  requirements.txt
