[project]
name = "demo-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aioboto3==14.3.0",
    "aiobotocore==2.22.0",
    "aiofiles==24.1.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.12.2",
    "aioitertools==0.12.0",
    "aiosignal==1.3.2",
    "amazon-transcribe==0.6.4",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "async-timeout==4.0.3",
    "attrs==25.3.0",
    "av==14.4.0",
    "awscrt==0.26.1",
    "boto3==1.37.3",
    "botocore==1.37.3",
    "certifi==2025.4.26",
    "cffi==1.17.1",
    "charset-normalizer==3.4.2",
    "click==8.2.1",
    "colorama==0.4.6",
    "coloredlogs==15.0.1",
    "distro==1.9.0",
    "docstring-parser==0.16",
    "dotenv==0.9.9",
    "eval-type-backport==0.2.2",
    "exceptiongroup==1.3.0",
    "filelock==3.18.0",
    "flatbuffers==25.2.10",
    "frozenlist==1.6.0",
    "fsspec==2025.5.1",
    "google-api-python-client==2.147.0",
    "google-auth==2.34.0",
    "google-auth-httplib2==0.2.0",
    "google-auth-oauthlib==1.2.1",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "huggingface-hub==0.32.1",
    "humanfriendly==10.0",
    "idna==3.10",
    "jinja2==3.1.6",
    "jiter==0.10.0",
    "jmespath==1.0.1",
    "livekit==1.0.11",
    "livekit-agents==1.2.1",
    "livekit-api==1.0.3",
    "livekit-plugins-assemblyai==1.2.1",
    "livekit-plugins-aws==1.2.1",
    "livekit-plugins-azure==1.2.1",
    "livekit-plugins-cartesia==1.2.1",
    "livekit-plugins-deepgram==1.2.1",
    "livekit-plugins-elevenlabs==1.2.1",
    "livekit-plugins-google==1.2.1",
    "livekit-plugins-noise-cancellation==0.2.5",
    "livekit-plugins-openai==1.2.1",
    "livekit-plugins-silero==1.2.1",
    "livekit-plugins-turn-detector==1.2.1",
    "livekit-protocol==1.0.4",
    "markupsafe==3.0.2",
    "mpmath==1.3.0",
    "multidict==6.4.4",
    "nest-asyncio==1.6.0",
    "numpy==1.26.0",
    "onnxruntime==1.22.0",
    "openai==1.84.0",
    "packaging==25.0",
    "pillow==11.2.1",
    "propcache==0.3.1",
    "protobuf==6.31.0",
    "psutil==7.0.0",
    "pycparser==2.22",
    "pydantic==2.11.5",
    "pydantic-core==2.33.2",
    "pyjwt==2.10.1",
    "pyreadline3==3.5.4",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.0",
    "pytz==2024.1",
    "pyyaml==6.0.2",
    "redis==6.2.0",
    "regex==2024.11.6",
    "requests==2.32.3",
    "s3transfer==0.11.3",
    "safetensors==0.5.3",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sounddevice==0.5.2",
    "streamlit>=1.55.0",
    "sympy==1.14.0",
    "tabulate==0.9.0",
    "tokenizers==0.21.1",
    "torch==2.3.1",
    "tqdm==4.67.1",
    "transformers==4.52.3",
    "types-protobuf==4.25.0.20240417",
    "typing-extensions==4.13.2",
    "typing-inspection==0.4.1",
    "upstash-redis==1.4.0",
]
